--- a/episodes.html
+++ b/episodes.html
@@ -74,9 +74,7 @@
                             Ep. 1: Leading with Kindness
                         </h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                            Libero dignissimos voluptatibus explicabo esse exercitationem 
-                            assumenda debitis quasi consequuntur laboriosam.
+                            In our debut episode, we were delighted to have Funmi Buckor, the Founder and Host of "The World of Work with HRmadam" Radio Show, as our esteemed guest at The HRmadam Company, where she generously imparted invaluable insights on tackling the ongoing fuel subsidy removal challenges and offered strategic advice for organizations aiming to establish themselves as premier employers of choice.
                         </p>
                     </div>
                     
