--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </section>
         <section id="contact-section">
             <div class="contact-container">
-                <h4 class="contact-heading">Let's Talk HR</h4>
+                <h4 class="contact-heading">Let's do HR Together</h4>
                 <p>
                     Got HR questions or ideas? Let's talk! <br>
                     Whether you're curious about our podcast topics or want to share your HR insights, 
