--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <a href="#">About us</a>
                     <hr class="line">
                     <p>
-                        WeinHR podcasts bring you thought-provoking discussions, latest trends, 
+                        WeinHR podcasts bring you thought-provoking discussions, the latest trends, 
                         and best practices that shape the workplace.
                     </p>
                     <a target="_blank" class="link" href="https://www.youtube.com/@weinhr">
@@ -178,7 +178,7 @@
                     <a target="_blank" class="link" href="#">
                         <img class="btn" src="./Images/Social Media Icons/LinkedIn icon.png" alt="LinkedIn icon">
                     </a>
-                    <a target="_blank" class="link" href="#">
+                    <a target="_blank" class="link" href="https://www.instagram.com/weinhr/?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D">
                         <img class="btn" src="./Images/Social Media Icons/instagram-icon.png" alt="Instagram icon">
                     </a>
                 </div>
