--- a/contact.html
+++ b/contact.html
@@ -144,10 +144,10 @@
                         <a target="_blank" class="link" href="https://open.spotify.com/show/3EzBkcGtj9fajQPtlO9Gf4">
                             <img class="btn" src="./Images/Social Media Icons/Spotify-icon.png" alt="spotify icon">
                         </a>
-                        <a target="_blank" class="link" href="#">
+<!--                         <a target="_blank" class="link" href="#">
                             <img class="btn" src="./Images/Social Media Icons/LinkedIn icon.png" alt="LinkedIn icon">
-                        </a>
-                        <a target="_blank" class="link" href="#">
+                        </a> -->
+                        <a target="_blank" class="link" href="https://www.instagram.com/weinhr/?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D">
                             <img class="btn" src="./Images/Social Media Icons/instagram-icon.png" alt="Instagram icon">
                         </a>
                     </div>
